<resources>
    <string name="app_name">Project</string>
    <string name="menu">Menu</string>
    <string name="smoked_salmon_roll">Smoked Salmon Roll</string>
    <string name="salmon_rio_roll">Salmon Rio Roll</string>
    <string name="avocado_salmon_roll">Avocado Salmon Roll</string>
    <string name="caviar_salmon_roll">Caviar Salmon Roll</string>
    <string name="spicy_salmon_roll">Spicy Salmon Roll</string>
    <string name="crispy_tuna_sandwich">Crispy Tuna Sandwich</string>
    <string name="special_combination">Special Combination</string>
    <string name="crispy_tuna_roll">Crispy Tuna Roll</string>
    <string name="finish">Finish</string>
    <string name="save_your_order">save your order</string>
    <string name="finish_you_r_order">Finish You\'r Order</string>
    <string name="you_r_order">You\'r order</string>
    <string name="amount">Amount</string>
    <string name="fill_your_information">Fill Your Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="send_your_order">Send your order</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create account</string>
    <string name="log_inn">Log in :</string>
    <string name="sign_inn">Sign In :</string>
    <string name="see_the_orders">See the orders</string>
    <string name="log_out">Log out</string>
    <string name="see_your_order">see your order</string>
    <string name="your_orders">your orders</string>
    <string name="clients_orders">clients orders</string>
    <string name="you_r_orderr">You\'r Order</string>
    <string name="status">Status:</string>
    <string name="back">back</string>
    <string name="all_the_orders">All the orders</string>
    <string name="order">Order</string>
    <string name="ready">Ready</string>
    <string name="delete">Delete</string>
    <string name="not_ready">Not Ready</string>
    <string name="add_to_menu">Add to menu</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
</resources>