<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1A1A"
    android:orientation="vertical"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="198dp"
        android:background="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="349dp"
            android:layout_height="346dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="#ffff">

            <TextView
                android:layout_width="105dp"
                android:layout_height="43dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/amita_bold"
                android:text="@string/sign_inn"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="130dp"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="195dp"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/password"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="265dp"
                android:password="true"
                android:hint="@string/password" />

        </androidx.cardview.widget.CardView>

    <Button
        android:onClick="clickedSign_in"
        android:layout_width="136dp"
        android:layout_height="64dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:textSize="18sp" />
    <Button
        android:onClick="toLogIn"
        android:layout_width="136dp"
        android:layout_height="64dp"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textSize="18sp" />
    </LinearLayout>
</ScrollView>