<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1A1A"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        android:background="@drawable/logo" />

    <Button
        android:visibility="gone"
        android:id="@+id/menuBtn"
        android:layout_width="204dp"
        android:layout_height="79dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/amita_bold"
        android:onClick="startMenu"
        android:text="@string/menu"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amita_bold"
        android:onClick="toTheOrders"
        android:text="@string/clients_orders"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amita_bold"
        android:onClick="logOut"
        android:text="@string/log_out"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/sushi1" />


</LinearLayout>