<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ClientOrder">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:layout_marginTop="0dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/amita_bold"
                android:text="@string/you_r_orderr"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="199dp"
                android:layout_height="125dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/sushi_take_away_package" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp">

            <TableLayout
                android:id="@+id/orderTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/you_r_order"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/amount"/>
                </TableRow>

                <TableRow
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />
                </TableRow>

                <TableRow
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />

                </TableRow>
                <TableRow
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />
                </TableRow>
                <TableRow
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />
                </TableRow>
                <TableRow
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />
                </TableRow>
                <TableRow
                    android:visibility="gone"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp" />
                </TableRow>

            </TableLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp">
            <TextView
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/price"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTxt"
                android:layout_width="132dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="71dp"
                android:layout_height="34dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="85dp"
                android:background="#4C0404"
                android:onClick="delete"
                android:textAlignment="center"
                android:text="@string/delete"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
        </androidx.cardview.widget.CardView>
        <Button
            android:onClick="goBackM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="150dp"
            android:text="@string/back"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="100dp" />
    </LinearLayout>

</ScrollView>